fix right align, refactor

--- a/style.css
+++ b/style.css
@@ -114,6 +114,8 @@ button:hover{
     
 }
 
-#charCount {
-    text-align: right;
+#char-count {
+    float: right;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
 }
